# gomoku

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.svelte  GomokuBoard.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_ico.py  generate_icon.js  icon.icns
src-tauri/src/: ai_core.rs  main.rs
